# timetagger_shortcuts

./: Cargo.toml  Dockerfile  README.md
.github/: docker.yml
.github/workflows/: docker.yml
src/: api.rs  keygen.rs  lib.rs  main.rs  records.rs
