[package]
name = "timetagger_shortcuts"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "timetagger_shortcuts"

[dependencies]
anyhow = "1.0.98"
rand = "0.9.1"
reqwest = { version = "0.12.18", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
