[package]
name = "timetagger_shortcuts"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "timetagger_shortcuts"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4" }
rand = "0.9.1"
reqwest = { version = "0.12.18", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
